src/objects/Customer_Rec_Type_Brand_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Back_Office_Queue__c</fullName>
        <description>Name of Back Office Queue for this Brand</description>
        <label>Back Office Queue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Image__c</fullName>
        <description>Name of static resource that represents the brand.</description>
        <label>Brand Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>Company Code in Avalara</description>
        <label>Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Key__c</fullName>
        <description>Merchant Key for BizTalk Payment Integration</description>
        <label>Merchant Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Brand__c</fullName>
        <description>Needed for Inbound Call Controller</description>
        <label>Picklist Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Suffix_c__c</fullName>
        <label>Product_Suffix__c</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <description>Non-DeveloperName for Record Type; needed for CTI</description>
        <label>RecordTypeName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Prefix__c</fullName>
        <description>Server prefix for the Brand, Mainly used by the AS400 to differentiate orders/brands</description>
        <label>Server Prefix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Image_URL__c</fullName>
        <description>Location on the web of the products image; leading URL only</description>
        <label>Static Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable_States__c</fullName>
        <description>Semicolon list of taxable states; important for Avalara integration/callouts</description>
        <label>Taxable States</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantID__c</fullName>
        <description>Tenant ID for AgilOne recommendations</description>
        <label>TenantID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, products can only be sold to US ship-to addresses</description>
        <label>US Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WS_ID__c</fullName>
        <description>Website ID needed for promotions engine</description>
        <label>WS ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Customer Rec Type Brand Mapping</label>
</CustomObject>